fix: do not force scrollbar for search results

--- a/src/index.scss
+++ b/src/index.scss
@@ -89,7 +89,7 @@
     .results-list {
       height: 100%;
       max-height: 500px;
-      overflow-y: scroll;
+      overflow-y: auto;
 
       &:first-child {
         border-top-left-radius: 5px;
